--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,16 @@
+<!DOCTYPE html>
+<html>
+	<head>
+
 <h1>StaticPages#contact</h1>
+<title>contact</title>
+</head>
+
+
+<body>
+
 <p>Find me in app/views/static_pages/contact.html.erb</p>
+</body>
+</html>
+
+
