--- a/app/views/static_pages/resume.html.erb
+++ b/app/views/static_pages/resume.html.erb
@@ -1,2 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Resume</title>
+</head>
+<body>
+
+</body>
+</html>
 <h1>StaticPages#resume</h1>
 <p>Find me in app/views/static_pages/resume.html.erb</p>
