--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,3 +1,11 @@
+
+<% provide(:title, "Stuff") %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title><%= yield(:title) %></title>
+</head>
+<body>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Microposts</h1>
@@ -29,3 +37,7 @@
 <br>
 
 <%= link_to 'New Micropost', new_micropost_path %>
+
+</body>
+</html>
+
