--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,23 @@
 <p id="notice"><%= notice %></p>
-
+<% provide(:title, @user.name) %>
 <p>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+    	<h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+      </section>
+     </aside>
+ </div>
   <strong>Name:</strong>
   <%= @user.name %>
 </p>
 
 <p>
   <strong>Email:</strong>
+ <%= gravatar_for @user %>
   <%= @user.email %>
 </p>
 
