--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 <% provide(:title, @user.name) %>
 <p>
+<ul>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
@@ -11,15 +12,16 @@
       </section>
      </aside>
  </div>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+ </ul>
 
+ <ul>
+ <div class="container">
 <p>
   <strong>Email:</strong>
- <%= gravatar_for @user %>
   <%= @user.email %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</div>
+</ul>
