--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,14 @@
+<div class="container">
 <footer class="footer">
+<% if logged_in? %>
+<small>
+   <%= link_to "Log out", logout_path, class: "btn btn-sm btn-primary" %>
+</small>
+<% else %>
   <small>
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-sm btn-primary" %>
+    <%= link_to "Sign in!", login_path, class: "btn btn-sm btn-primary" %>
   </small>
+<% end %>
   <nav>
     <ul>
       <li>  </li>
@@ -13,3 +20,4 @@
     </ul>
   </nav>
 </footer>
+<div>
