--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
-<div class="container">
 <footer class="footer">
-<% if logged_in? %>
+ <% if logged_in? %>
 <small>
-   <%= link_to "Log out", logout_path, class: "btn btn-sm btn-primary" %>
+    <%= link_to "Log out", logout_path, method: "delete" %>
 </small>
 <% else %>
   <small>
@@ -20,4 +19,3 @@
     </ul>
   </nav>
 </footer>
-<div>
