--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,9 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Resume",   resume_path %></li>
             <li><%= link_to "Contact",   contact_path %></li>
+            <% if logged_in? %>
+            <li><%= link_to "Profile",   current_user %></li>
+            <% end %>
           </ul>
 
         </nav>
