--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,20 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
+<%= will_paginate %>
 
-<h1>Listing Users</h1>
+<ul class="users">
+  <% @users.each do |user| %>
+        <%= render user %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      
+<% end %>
+</ul>
+<%= will_paginate %>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
 
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+
