--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 
 <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-      <div  id="front_header">
+      <div  id="front_header", align="left">
       <h1>Ideas Connect Us</h1> 
       </div>
         <nav>
