--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,42 +1,27 @@
 
 <% provide(:title, "Stuff") %>
-<!DOCTYPE html>
-<html>
-<head>
-  <title><%= yield(:title) %></title>
-</head>
-<body>
+<div class="row">
+
 <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="col-md-8">
+<%= link_to 'New Micropost', new_micropost_path %><br>
 
-  <tbody>
-    <% @microposts.each do |micropost| %>
-      <tr>
-        <td><%= micropost.title %></td>
-        <td><%= micropost.body %></td>
-        <td><%= micropost.user_id %></td>
-        <td><%= link_to 'Show', micropost %></td>
-        <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<ol class="microposts">   
+      <%= render @microposts %>
 
-<br>
-
-<%= link_to 'New Micropost', new_micropost_path %>
+ </ol>
+  <%= will_paginate @micropost %>
 
 
-</body>
-</html>
+
+  
+
+
+</div>
+</div>
+
+
+
+
 
