--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 </small>
 <% else %>
   <small>
-    <%= link_to "Sign in!", login_path, class: "btn btn-sm btn-primary" %>
+    <%= link_to "Sign in!", login_path, :class => "btn btn-primary btn-md" %>
   </small>
 <% end %>
   <nav>
