--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
 <body>
 <%= render 'layouts/header' %>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
 
-      <div class="col-md-4">
+      <div class="col-lg-3">
         
       </div>
-      <div class="col-md-8">
-            <p class="title" id="Ideas"><%= yield(:title) %></p>
+      <div class="col-lg-9">
+            <p class="title-header" id="Header"><%= yield(:title) %></p>
       </div>
   </div>
 <div class="row">
