--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,24 +1,23 @@
 <span id="micropost-<%= micropost.id %>">
-  <div class="container-fluid">
+<div class="row">
 
-  <div class="col-md-1">
+  <ul class="col-md-1">
         
-   </div>
-   
-  <div class="panel-group">
-  <div class="col-md-3">
-          <span class="img-rounded">
+   </ul>
+  
+  <ul class="content">
+  <ul class="col-md-3">
+          <ul class="img-rounded">
             <%= image_tag micropost.picture.url(:thumb) if micropost.picture? %>
-            </span>
-  </div>
-  <div class="col-md-8">
-          <h4>
+          </ul>
+  </ul>
+  <ul class="col-md-8">
+          <span class="title">
             <%= link_to micropost.title, micropost_path(micropost) %>
-          </h4>
+          </span>
           <h5>
           <%= micropost.body.truncate_words(40) %>
           </h5>
-          <br>
           <h6>
           <span class="timestamp">
             Posted <%= time_ago_in_words(micropost.created_at) %> ago.
@@ -28,11 +27,9 @@
             <%= link_to 'Edit', edit_micropost_path(micropost) %>
             <%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %>
             </h6>
-            
-  </div>
-  </div>
-</div>
+  </ul>
+  </ul>
     
   </span>
-
+</div>
 
