--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
 
-<h1>StaticPages#contact</h1>
-<title>contact</title>
-</head>
+<% provide(:title, "Contact") %>
 
+<a name="contact">Contact</a>
 
-<body>
 
 <div class="container-fluid">
   <div class="row-fluid">
@@ -41,7 +36,5 @@ Rebels also questioned the real impact of the deal on the ground, since it exclu
 </div>
 
 
-</body>
-</html>
 
 
