--- a/app/views/static_pages/resume.html.erb
+++ b/app/views/static_pages/resume.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Resume</title>
-</head>
+<% provide(:title, "Resume") %>
+<% content_for :description do %>How to contact me<% end %>
+
+
 <body>
 		<div class="row">
+    <a id="resume">Resume</a>
   <div class="span9">
     </h3>Level 1 column:
     The Syrian president was speaking to the AFP news agency in Damascus on Thursday, hours before an agreement was reached in Munich on arranging a cessation of hostilities and the urgent despatch of food, medicines and other supplies to hundreds of thousands of civilians in besieged areas.
