--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
+  <title><%= yield(:title) %></title>
+  <meta name="Ideas" content="<%= content_for?(:description) ? yield(:description) : "Learn Rails" %>">
 
   <%= stylesheet_link_tag 'application', media: 'all',
                                            'data-turbolinks-track' => true %>
@@ -12,19 +12,11 @@
 
 </head>
 <body>
+<header>
 <%= render 'layouts/header' %>
-
-<div class="container">
-  <div class="row">
-
-      <div class="col-lg-3">
-        
-      </div>
-      <div class="col-lg-9">
-            <p class="title-header" id="Header"><%= yield(:title) %></p>
-      </div>
-  </div>
-<div class="row">
+<%= render 'layouts/banner' %>
+</header>
+<main role="main">
 
         <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
@@ -33,10 +25,12 @@
 
               <%= yield %>
 
-</div>
-</div>
+</main>
+<footer>
     <%= render 'layouts/images' %>
+    <%= render 'layouts/contact' %>
     <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
+</footer>
 </body>
 </html>
