--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+<div class="container">
 
   <div class="field">
     <%= f.label :title %><br>
@@ -34,4 +35,5 @@
       alert('Maximum file size is 5MB. Please choose a smaller file.');
     }
   });
+</div>
 </script>
