--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,13 +1,19 @@
 
-<% provide(:title, "Stuff") %>
+<% provide(:title, "Ideas") %>
+<div class="container">
 <div class="row">
 
-<div class="col-md-1">
-</div>
-<div class="col-md-11">
-<%= link_to 'New Micropost', new_micropost_path, :class => "btn btn-primary btn-md" %><br>
-<br>
-</div>
+	<table style="width:100%">
+	<tr>
+	<td style="width:20%">
+			<h2 class="title-header" id="ideas">Ideas</h2>
+	</td>
+	<td style="width:80%">
+		<%= link_to 'New Micropost', new_micropost_path, :class => "btn-right btn-primary btn-sm" %>
+	</td>
+	</tr>
+	</table>
+
 </div>
 
 
@@ -26,7 +32,7 @@
   
 
 
-
+</div>
 
 
 
