--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,3 +1,9 @@
+<div class="container-fluid"
 <div class="jumbotron">
-    <%= image_tag("header.jpg", :alt => "header") %>
+    <%= image_tag("header.jpg", :alt => "header", :class => "img-responsive") %>
+</div>
+<div>
+
+
+</div>
 </div>
