--- a/app/views/layouts/_images.html.erb
+++ b/app/views/layouts/_images.html.erb
@@ -1,7 +1,7 @@
 
 
 
- <div class="image_banner">
+ <div class="ribbon">
 
  	<a data-flickr-embed="true"  href="https://www.flickr.com/photos/138220357@N03/24761456396/in/album-72157663693230710/" title="P1038567[1]"><img src="https://farm2.staticflickr.com/1569/24761456396_7f80c839b4_z.jpg" width="320" height="160" alt="P1038567[1]"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
