--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,39 +1,41 @@
 
-<span id="micropost-<%= micropost.id %>">
 <div class="container">
 <div class="row">
   <div class="col-md-1">
-  <p id=""></p>
+      <span id="micropost-<%= micropost.id %>"></span>
   </div>
   
-  <div class="content">
-    <span class="title">
-            <%= link_to micropost.title, micropost_path(micropost, anchor: "head") %>
-    </span>
-    <table style="width:100%">
-      <tr>
-        <td style="width:20%">
-        <span class="sm-logo">
-                <%= image_tag micropost.picture.url(:thumb) if micropost.picture? %>
-        </span>
-       </td>
-        <td style="width:80%">
-             <h5>
-              <%= micropost.body.truncate_words(40) %>
-              </h5>
-              <h6>
-              <span class="timestamp">
-                Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-              </span>
-              </h6>
-              <h6>
-                <%= link_to 'Edit', edit_micropost_path(micropost) %>
-                <%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <div class="col-md-10">
+      <span>
+         <p class="title-post">   <%= link_to micropost.title, micropost_path(micropost, anchor: "head") %> </p>
+      </span>
+      <table style="width:100%">
+        <tr>
+          <td style="width:20%">
+          <span class="sm-logo">
+                  <%= image_tag micropost.picture.url(:thumb) if micropost.picture? %>
+          </span>
+         </td>
+          <td style="width:60%">
+               <h5>
+                <%= micropost.body.truncate_words(40) %>
+                </h5>
+                <h6>
+                <span class="timestamp">
+                  Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+                </span>
                 </h6>
-          </td>
-        </tr>
-      </table>
+                <h6>
+                  <%= link_to 'Edit', edit_micropost_path(micropost) %>
+                  <%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </h6>
+            </td>
+          </tr>
+         </table>
+      </div>
+     <div class="col-md-1">
+     </div>
 </div>
 </div>
- </span>
+</div>
 
