--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -3,7 +3,8 @@
 <div class="row">
 <div class="ribbon">
 	<div style="width=50%">
-	<h0 name="contact" id="contact" class="title-anchor"> Contact </h0>
+	<h0 name="contact" id="contact"></h0>
+	<p class="title-header">Contact</p>
 	</div>
 	<div style="width=50%">
 	
