--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -18,7 +18,7 @@
 				
 		</td>
 		<td style="width:10%">
-			<span class="btn-primary">
+			<span>
 			<%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm" %>
 			</span>
 		</td>
