--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,10 +38,14 @@ a:link:active, a:visited:active {
 
 
 button {
-  padding-top: auto;
-  padding-bottom: auto;
-   
-}
+  display: block;
+  text-color: #fff;
+  }
+button:hover, button:focus, button:active, button:target{
+    text-color: #fff;
+    text-decoration: none;
+
+  }
 
 button-right {
   
@@ -51,7 +55,6 @@ button-right {
 
    :hover {
     color: #fff;
-    text-decoration: none;
     }
 
 }
@@ -88,6 +91,10 @@ textarea {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
+
+.custom-menu {
+  font-size: 18px;
+  }
 
 .title-header {
   font-size: 1.5em;
