--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid"
+<div class="container-fluid">
 <div class="jumbotron">
     <%= image_tag("header.jpg", :alt => "header", :class => "img-responsive") %>
 </div>
