--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,11 @@
 <div class="footer">
      <% if logged_in? %>
     <small>
-        <%= link_to "Log out", logout_path, method: "delete", :class => "btn btn-primary btn-sm" %>
+        <%= link_to "Log out", logout_path, method: "delete", :class => "btn btn-primary btn-sm active" %>
     </small>
     <% else %>
       <small>
-        <%= link_to "Sign in!", login_path, :class => "btn btn-primary btn-sm" %>
+        <%= link_to "Sign in!", login_path, :class => "btn btn-primary btn-sm button active" %>
       </small>
     <% end %>
       <nav>
