--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,8 @@
           </div>
         <nav>
           <div class="navbar-inner">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav custom-menu">
+
               <li><%= link_to "Ideas", root_url(:anchor => "ideas") %></li>
               <li><%= link_to "Projects",   root_url(:anchor => "project") %></li>
               <li><%= link_to "Contact",   root_url(:anchor => "contact") %></li>
