--- a/app/views/layouts/_project.html.erb
+++ b/app/views/layouts/_project.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
 <div class="row>"
 	<div class="" style="width=50%">
-			<h0 name="project" id="project" class="title-anchor"> Project </h0>
+	<h0 name="project" id="project"></h0>
+	<p class="title-header">Project</p>
 	</div>
 	<div style="width=50%">
 		
