--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -18,13 +18,13 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.cktext_area :body, :ckeditor => {:language => 'us'} %>
   </div>
  <div class="picture">
-    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', :class => "btn btn-primary btn-sm button active" %>
   </div>
   <div class="btn btn-primary btn-sm">
-    <%= f.submit %>
+    <%= f.submit, :class => "btn btn-primary btn-sm button active" %>
   </div>
 <% end %>
 </div>
