--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,16 @@
 
+ <div class="container">
  <div class="navbar navbar-fixed-top navbar-inverse">
-  
-
-          <div>
-          <h1 class="frontHeader">Ideas Connect Us</h1> 
+ <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+          <p class="frontHeader">Ideas Connect Us</p> 
           </div>
+          <div class="col-md-2"></div>
+  </div>
+  <div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
         <nav>
           <div class="navbar-inner">
             <ul class="nav navbar-nav custom-menu">
@@ -19,5 +25,10 @@
             </div>
         </nav>
       </div>
-      </div>
-    </nav>
+      <div class="col-md-2"></div>
+
+    </div>
+    </div>
+    </div>
+
+      
