--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -3,11 +3,9 @@
 <h1>Editing Micropost</h1>
 
 <%= render 'form' %>
-<div class="ribbon">
-<%= link_to 'Cancel', @micropost, :class => "btn btn-primary btn-sm" %>
-</div>
-<div class="ribbon">
-<%= link_to 'Back', microposts_path, :class => "btn btn-primary btn-sm" %>
+<div>
+<%= link_to 'Cancel', @micropost, :class => "btn btn-primary btn-sm active" %>
+<%= link_to 'Back', microposts_path, :class => "btn btn-primary btn-sm active" %>
 </div>
 </div>
 </div>
