--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,9 +1,7 @@
-<div class="container-fluid">
+<div class="container">
+<div class="row">
 <div class="jumbotron">
     <%= image_tag("header.jpg", :alt => "header", :class => "img-responsive") %>
 </div>
-<div>
-
-
 </div>
 </div>
