--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -3,36 +3,22 @@
 <% provide(:title, "Ideas") %>
 <div class="container">
 <div class="row">
-  <div class="col-md-1">
-  </div>
-
-<div class="col-md-10">
-	<div class="content">
-	
-    <table style="width:100%">
-		<tr>
-		<h0 id="ideas" name="ideas"></h0>
-		<td style="width:90%">
-		
-		<p class="title-header">Ideas</p>
+       <div class="col-md-2"></div>
+	    <div class="col-md-8">
+			<h0 id="ideas" name="ideas"></h0>
+			<p class="title-header">Ideas</p>
+		</div>
+		<div class="col-md-2">
 				
-		</td>
-		<td style="width:10%">
-			<span>
-			<%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm" %>
-			</span>
-		</td>
-		</tr>
-	</table>
-	</div>
-  <div class="col-md-1">
-  </div>
-	</div>
-	</div>
-	</div>
+				<%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active right-button" %>
+				
+		</div>
+</div>		
+
+  
+	
 
 	<span class="microposts">   
-
 
 
 	      <%= render @microposts %>
@@ -46,7 +32,7 @@
   
 
 
-
+</div>
 
 
 
