--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,8 @@
 
 
         <%= render 'layouts/project' %>
-         <%= render 'layouts/images' %>
+        <%= render 'flickr/index' %>
+
          <%= render 'layouts/contact' %>
 </main>
 <footer>
