--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,10 +14,13 @@
         <ul>
           <li>  </li>
           <li>
-          <%= link_to image_tag("rails.png", alt: "Rails logo"),
-                'http://rubyonrails.org/' %></li>
-          <li><%= link_to "Contact", '#' %></li>
-          <li><a href="http://news.railstutorial.org/">News</a></li>
+          <%= link_to image_tag("instagram.png", alt: "Instagram", size: "25x25"),
+                'https://www.instagram.com/soniacaan/' %></li>
+          <%= link_to image_tag("twitter.png", alt: "Twitter", size: "25x25"),
+                'https://twitter.com/Sonia_here' %></li>
+          <%= link_to image_tag("linkedin.png", alt: "Linkedin", size: "25x25"),
+                'https://ca.linkedin.com/in/caansonia' %></li>
+          
         </ul>
       </nav>
 </div>
