--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,11 @@
 
 
         <%= render 'layouts/project' %>
-        <%= render 'flickr/index' %>
+               
+        <% cache ("flickr_sidebar") do %>
+<%= render_flickr_sidebar_widget('138220357@N03') %>
+                <% end %>
 
-         <%= render 'layouts/contact' %>
 </main>
 <footer>
    
