--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -3,16 +3,18 @@
 <% provide(:title, "Ideas") %>
 <div class="container">
 <div class="row">
-       <div class="col-md-2"></div>
-	    <div class="col-md-8">
-			<h0 id="ideas" name="ideas"></h0>
-			<p class="title-header">Ideas</p>
-		</div>
-		<div class="col-md-2">
+       <div class="col-md-12">
 				
 				<%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active right-button" %>
 				
 		</div>
+</div>
+<div class="row">
+	    <div class="col-md-12">
+			<h0 id="ideas" name="ideas"></h0>
+			<p class="title-header">Ideas - Great ideas are empowered by teams, people who are driven by their passion.</p>
+		</div>
+		 <div class="col-md-4"></div>
 </div>		
 
   
