--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,10 @@
  <div class="container">
  <div class="navbar navbar-fixed-top navbar-inverse">
  <div class="row">
+
           <div class="col-md-2"></div>
           <div class="col-md-8">
-          <p class="frontHeader">Ideas Connect Us</p> 
+          <p class="title-banner">Ideas Connect Us</p> 
           </div>
           <div class="col-md-2"></div>
   </div>
