--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -4,7 +4,9 @@
 
 <% provide(:title, @micropost.title) %>
 
+<div id="article">
 <div class="container">
+
 <div class="row">
 	<div class="col-md-2">
 	</div>
@@ -32,5 +34,6 @@
 	</div>
   <div class="col-md-2">
   </div>
+</div>
 </div>
 </div>
