--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<div class="row">
 <li>
       <%= gravatar_for user %>
       <%= link_to user.name, user %>
@@ -9,3 +11,6 @@
         <%= link_to 'Edit', edit_user_path(user) %>
         <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
         </li>
+
+</div>
+</div>
