--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+<div class="row">
+
 <li>
       <%= gravatar_for user %>
       <%= link_to user.name, user %>
@@ -10,3 +13,6 @@
         <li><%= link_to 'Show', user %> 
         <%= link_to 'Edit', edit_user_path(user) %>
         <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+
+</div>
+</div>
