--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -27,6 +27,9 @@
   <div class="btn btn-primary btn-sm button active">
     <%= f.submit %>
   </div>
+  <div>
+  <%= link_to 'Back', microposts_path, :class => "btn btn-primary btn-sm active" %>
+  </div>
 <% end %>
 </div>
 </div>
