--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,6 +1,7 @@
 
-
 <% provide(:title, "Ideas") %>
+<div id="article">
+
 <div class="container">
 <div class="row">
        <div class="col-md-12">
@@ -9,6 +10,8 @@
 				
 		</div>
 </div>
+
+
 <div class="row">
 	    <div class="col-md-12">
 	    <%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active right-button" %>
@@ -35,6 +38,7 @@
   
 
 
+</div>
 </div>
 
 
