--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -41,16 +41,20 @@
 
   <%= will_paginate @micropost %>
 </div>
+</div>
 <div>
+	
 		 <% cache ("flickr_sidebar") do %>
 <%= render_flickr_sidebar_widget('138220357@N03') %>
                 <% end %>
 
 </div>
-</div>
+
+<div>
+
 	<%= render 'layouts/project' %>
 
-
+</div>
 <div class="container">
 <div class="row">
 <div class="col-md-12">
